tests/compilefail55.out
[1mtests/compilefail55.pas:10:5: [0m[1m[91merror:[0m Cannot invoke function without assigning its return value: 'oops'
    10 | 	oops(3);